<resources>
    <string name="app_name">koodoc</string>
    <string name="drug_ibuprofen_syrup">شربت یا سوسپانسیون ایبوپروفن (دوز 100 میلی گرم در 5 میلی لیتر)</string>
    <string name="drug_paracetamol_syrup">شربت یا سوسپانسیون استامینوفن (دوز 120 میلی گرم در 5 میلی لیتر)</string>
    <string name="drug_paracetamol_drop">قطره استامینوفن (دوز 100 میلی گرم در 1 میلی لیتر)</string>
    <string name="drug_paracetamol_suppository">شیاف استامینوفن (دوز 75 و 125 و 325 میلی گرم)</string>
    <string name="drug_ibuprofen_suppository">شیاف ایبوپروفن (دوز 75 و 150 میلی گرم)</string>
    <string name="age_below_6mon_ibuprofen_syrup">بهتر است از قطره ی استامینوفن استفاده شود. </string>
    <string name="weight_below_5_ibuprofen_syrup">در این وزن بهتر است از استامینوفن استفاده شود.</string>
    <string name="dose_2_5cc">۲٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_3_5_4cc">۳٫۵-۴ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_5cc">۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="months">ماهگی</string>
    <string name="languages">زبان ها</string>
    <string name="boys">پسران</string>
    <string name="lactose_without_colon">لاکتوز</string>
    <string name="selected_lang_fa">فارسی 🇮🇷</string>
    <string name="selected_lang_en">English 🇬🇧</string>
    <string name="age">سن:</string>
    <string name="milk_filters">مشخصات دلخواه</string>
    <string name="dose_7_5cc">۷٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_10cc">۱۰ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_1_5cc">۱٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_10drop">۱۰ قطره مصرف شود.</string>
    <string name="dose_20drop">۲۰ قطره مصرف شود.</string>
    <string name="dose_30drop">۳۰ قطره مصرف شود.</string>
    <string name="weight_below_7_5_ibuprofen_suppository">میتوانید از شیاف استامینوفن استفاده کنید.</string>
    <string name="age_6_8_mon_ibuprofen_suppository">از قطره ی استامینوفن استفاده کنید و با پزشک مشورت کنید.</string>
    <string name="age_below_6mon_ibuprofen_suppository">از شیاف استامینوفن استفاده شود.</string>
    <string name="infant_dosage_warning">⚠️ در صورتی که نوزاد شما کم تر از 10 روز دارد، با داروساز یا پزشک مشورت کنید. </string>
    <string name="multiple_drug_usage">⚠️ درصورت استفاده از چندین دارو به صورت هم زمان برای تعیین میزان صحیح مصرف باید حتما با داروساز یا پزشک مشورت کنید.- مثال 1: مصرف همزمان شربت و شیاف استامینوفن - مثال 2: مصرف همزمان شربت ایبوپروفن و شیاف ایبوپروفن - مثال 3: مصرف هم زمان داروهای ترکیبی مثل کوریزان و شربت و شیاف استامینوفن</string>
    <string name="warning_drug_allergy">⚠️ از نداشتن حساسیت کودک به داروها اطمینان حاصل کنید؛ برای اطلاعات بیشتر با پزشک یا داروساز مشورت کنید.</string>
    <string name="warning_ibuprofen_syrup_usage">از مصرف شربت ایبوپروفن با معده ی خالی خودداری شود.</string>
    <string name="suppository_75_5_4">یک عدد شیاف ۷۵  هر ۶ ساعت (در صورت تداوم تب) استفاده شود.</string>
    <string name="suppository_75_8_2">یک عدد شیاف ۷۵ استفاده شود. در صورت تداوم تب میتوانید حداکثر ۵ عدد شیاف در ۲۴ ساعت برای کودک استفاده کنید.</string>
    <string name="suppository_125">یک عدد شیاف ۱۲۵ میلی گرم استفاده شود. و در صورت نیاز و تداوم علائم(تب) میتوانید هر ۴ تا ۶ ساعت تا حداکثر ۵ عدد شیاف در ۲۴ ساعت  استفاده کنید.</string>
    <string name="suppository_325">یک عدد شیاف ۳۲۵ میلی گرم وابسته به میزان تب یا درد کودک مصرف شود. تا حداکثر ۵ عدد شیاف در ۲۴ ساعت</string>
    <string name="dose_3_5cc">۳٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_6_5cc">۶٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_20cc">۲۰ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_13_5_16_5_5cc">۱۳٫۵ تا ۱۶٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_13_5cc">۱۳٫۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="dose_10_12_5cc">۱۰-۱۲ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="suppository_75_1">۱ عدد شیاف ۷۵ میلی‌گرم استفاده شود، در صورت تداوم علائم (تب) تا حداکثر ۳ عدد در ۲۴ ساعت می‌توانید استفاده کنید.</string>
    <string name="suppository_75_2">۱ عدد شیاف ۷۵ میلی‌گرم استفاده شود، در صورت تداوم علائم (تب) تا حداکثر ۴ عدد در ۲۴ ساعت می‌توانید استفاده کنید.</string>
    <string name="suppository_150_1">۱ عدد شیاف ۱۵۰ میلی‌گرم استفاده شود، در صورت تداوم علائم (تب) تا حداکثر ۳ عدد در ۲۴ ساعت می‌توانید استفاده کنید.</string>
    <string name="suppository_150_2">۱ عدد شیاف ۱۵۰ میلی‌گرم استفاده شود، در صورت تداوم علائم (تب) تا حداکثر ۴ عدد در ۲۴ ساعت می‌توانید استفاده کنید.</string>
    <string name="weight_below_5_4_paracetamol_suppository">از قطره ی استامینوفن استفاده شود. و یا با پزشک مشورت کنید.</string>
    <string name="age_below_6mon_paracetamol_suppository">از قطره ی استامینوفن استفاده شود. و یا با پزشک مشورت کنید.</string>
    <string name="age_above_2_paracetamol_drop">بهتر است از شربت استامینوفن استفاده شود.</string>
    <string name="dose_15cc">۱۵ میلی‌لیتر (سی‌سی) مصرف شود.</string>
    <string name="weight_above_10_8_paracetamol_drop">از شربت استامینوفن استفاده کنید.</string>
    <string name="weight_below_2_7_paracetamol_drop">با پزشک یا داروساز مشورت شود.</string>
    <string name="weight_below_2_7_paracetamol_syrup">با پزشک یا داروساز مشورت شود.</string>
    <string name="age_weight_must_enter">حداقل یکی از دو مورد "وزن" یا "سن" باید وارد شود.</string>
    <string name="warning_paracetamol_syrup">در صورت تداوم علائم کودک، مثل تب، هر ۴ تا ۶ ساعت دوز مربوطه مصرف شود. نهایتاً در هر ۲۴ ساعت ۵ بار به کودک دارو داده شود.</string>
    <string name="warning_paracetamol_drop">در صورت تداوم علائم کودک، مثل تب، هر ۶ تا ۸ ساعت دوز مربوطه مصرف شود.</string>
    <string name="choose_drug_first">نوع دارو را انتخاب کنید.</string>
    <string name="below_5kg_warning">⚠️ برای کودکان کم تر از 5 کیلوگرم حتما از داروساز و یا پزشک مشورت گرفته شود.</string>
    <string name="fever_warning">⚠️ در صورت مصرف دارو برای کاهش تب، در قسمت ارزیابی علائم نرم افزار، تب و اندازه گیری تب خوانده شود.</string>
    <string name="read_before_use">نکات مهم استفاده از ماشین حساب</string>
    <string name="Year">سال</string>
    <string name="Month">ماه</string>
    <string name="Week">هفته</string>
    <string name="unit">واحد</string>
    <string name="close">بستن</string>
    <string name="warning_fever_usage">هر ۶ تا ۸ ساعت متناسب با تب کودک مصرف شود.</string>
    <string name="title_home">خانه</string>
    <string name="vaccine_info">اطلاعات واکسن ها</string>
    <string name="welcome_KooDoc">خوش آمدی به کوداک</string>
    <string name="next">بعدی</string>
    <string name="lets_go">بزن بریم!</string>
    <string name="account_main">account</string>
    <string name="choose_drug_name">نام دارو را انتخاب کنید</string>
    <string name="calculator_description">ماشین‌حساب دارویی دُز دقیق انواع داروها را بر اساس سن و وزن کودک و فرمول‌های استاندارد پزشکی محاسبه می‌کند.</string>
    <string name="not_substitute_warning">⚠️ این ابزار صرفاً راهنماست و جایگزین مشورت با پزشک یا داروساز نیست.</string>
    <string name="enter_age">سن کودک</string>
    <string name="dose_no_data"> "اطلاعات ناکافی برای محاسبه دوز."</string>
    <string name="kid_weight">وزن کودک (کیلوگرم)</string>
    <string name="warning_enter_weight_instead">برای دقت بیشتر، وزن را وارد کنید. اگر وزن را ندارید، سن را وارد نمایید.</string>
    <string name="but_calculator">حساب کن</string>
    <string name="logo_main">logo_main</string>
    <string name="checkup">checkup</string>
    <string name="checkup_image">checkup image</string>
    <string name="main_calculator">ماشین حساب دارویی</string>
    <string name="whatis_KooDoc">همراه هوشمندت برای مراقبت از سلامت کودکت</string>
    <string name="we_are_here"> با کوداک همیشه می‌دونی کی وقت دکتر رفتنه، چه علائمی مهمن، و چطور بهتر مراقب فرزندت باشی</string>
    <string name="lets_begin">آماده ای که شروع کنیم؟</string>
    <string name="who_am_i_talk">من دارم با چه کسی صحبت میکنم؟</string>
    <string name="mother">مامان</string>
    <string name="dad">بابا</string>
    <string name="other">سایر</string>
    <string name="relation">نسبت با کودک</string>
    <string name="go">بریم</string>
    <string name="hello">سلام</string>
    <string name="test">تست</string>
    <string name="info_to_help">برای اینکه بتونم بهتر کمکت کنم، یه‌سری اطلاعات ازت می‌خوام.</string>
    <string name="few_questions">چند تا سوال ازت می‌پرسم، باشه؟</string>
    <string name="name">نام</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="is_working">آیا شاغل هستید ؟</string>
    <string name="yes">بلی</string>
    <string name="no">خیر</string>
    <string name="parent_info">اطلاعات والدین</string>
    <string name="is_caring">آیا شما مراقب اصلی کودک هستید ؟</string>
    <string name="dear">عزیز</string>
    <string name="calculator_result_title">میزان دوز مصرفی:</string>
    <string name="info_for_baby">یه کم از بچه‌ات برام بگو، دوست دارم بیشتر بشناسمش! 😊</string>
    <string name="ready_2">آماده‌ای؟</string>
    <string name="kid_info">اطلاعات کودک</string>
    <string name="weight">وزن (کیلوگرم)</string>
    <string name="height">قد (سانتی متر)</string>
    <string name="disease_name">نام بیماری</string>
    <string name="add">افزودن</string>
    <string name="choose_disease">کودک به کدام موارد زیر مبتلاست؟</string>
    <string name="diabetes">دیابت</string>
    <string name="fawism">فاویسم (حساسیت به باقلا)</string>
    <string name="metabolic">بیماریهای متابولیک</string>
    <string name="asm">آسم</string>
    <string name="fibrozm">سیستیک فیبروزیس</string>
    <string name="seliac">سلیاک</string>
    <string name="choose_alergy">حساسیت های غیردارویی کودک را انتخاب کنید.</string>
    <string name="peanut">بادام زمینی</string>
    <string name="honey">عسل</string>
    <string name="cow_protein">پروتئین شیر گاو</string>
    <string name="my_kid_milk">شیر خشک های مناسب فرزند من</string>
    <string name="lact_none">ندارد</string>
    <string name="lact_negligible">ناچیز</string>
    <string name="lact_low">کم</string>
    <string name="lact_present">دارد</string>
    <string name="end_age_lifetime">آخر عمر</string>
    <string name="milk_protein">پروتئین شیر</string>
    <string name="is_school_first">آیا کودک به مدرسه یا\nمهدکودک می رود؟</string>
    <string name="social_activity_kid">حضور کودک در مکانهای عمومی</string>
    <string name="father_health">سوابق بیماری های \nخانواده پدر</string>
    <string name="mother_health">سوابق بیماری های \nخانواده مادر</string>
    <string name="family_disease_history">سوابق بیماریهای خانوادگی</string>
    <string name="list_family_dis">لیست بیماریهای خانوادگی</string>
    <string name="alergy_exema">آلرژی و اگزما</string>
    <string name="cancer">سرطان</string>
    <string name="digestive_disease">بیماریهای گوارشی</string>
    <string name="sef_disease">بیماریهای خودایمنی</string>
    <string name="kids">کودکان</string>
    <string name="symptoms_diag">ارزیابی علائم</string>
    <string name="food_milk">تغذیه و شیرخشک</string>
    <string name="alert_bad">مسمومیت</string>
    <string name="dry_milk">شیر خشک</string>
    <string name="current_kid">کودک من:</string>
    <string name="choose_by_kid">نمایش شیرخشک های کودکان من</string>
    <string name="all_milks">نمایش همه شیر خشک ها</string>
    <string name="manual_milk">نمایش شیرخشک ها براساس حساسیت کودک</string>
    <string name="see_milks">مشاهده شیر خشک ها</string>
    <string name="age_month">سن(ماه)</string>
    <string name="is_lactose">به لاکتوز حساسیت دارد؟</string>
    <string name="is_protein">به پروتئین شیرگاو حساسیت دارد؟</string>
    <string name="vaccine_main">اطلاعات واکسن</string>
    <string name="vaccine_age">واکسن بر اساس سن</string>
    <string name="special_child">واکسیناسیون کودکان با شرایط خاص</string>
    <string name="care_advice">توصیه های مربوط به واکسیناسیون</string>
    <string name="wrong_believes">باورهای غلط</string>
    <string name="about_vaccines">درباره واکسن ها</string>
    <string name="before">قبلی</string>
    <string name="elixir">الگزیر</string>
    <string name="lactose">لاکتوز:</string>
</resources>