<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.kid.KidAlergyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/main_margin"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/choose_alergy"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check_peanut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/peanut" />

                <CheckBox
                    android:id="@+id/check_honey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/honey" />

                <CheckBox
                    android:id="@+id/check_lactose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/lactose" />

                <CheckBox
                    android:id="@+id/check_protein"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/cow_protein" />

                <CheckBox
                    android:id="@+id/check_elixir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/elixir" />
            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/next"
            android:textStyle="bold"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/colorSecondary"
            app:strokeColor="@color/colorSecondary"
            app:strokeWidth="2dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/before"
            android:textStyle="bold"
            app:cornerRadius="8dp" />
    </LinearLayout>
</FrameLayout>