<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.kid.KidDiseaseFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/choose_disease"
            android:layout_marginTop="18dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/dynamicCheckContainer">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/diabetes"
                    android:id="@+id/check_diabetes"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/fawism"
                    android:id="@+id/check_fawism"/>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/metabolic"
                    android:id="@+id/check_metabolism"/>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/asm"
                    android:id="@+id/check_asm"/>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/fibrozm"
                    android:id="@+id/check_fibrozm"/>


                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/seliac"
                    android:id="@+id/check_seliac"/>
            </LinearLayout>
        </ScrollView>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="18dp"-->
<!--            android:id="@+id/txt_dis"-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="@color/black"/>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/disease_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusTopStart="15dp"
                app:boxCornerRadiusBottomStart="15dp"
                app:boxCornerRadiusBottomEnd="15dp"
                android:visibility="visible"
                android:layout_marginTop="18dp"
                app:boxCornerRadiusTopEnd="15dp"
                android:id="@+id/box_name"
                app:endIconMode="clear_text"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidth="2dp">

                <EditText
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                app:cornerRadius="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/colorSecondary"
                android:text="@string/add"
                android:id="@+id/btn_add"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/colorPrimary"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp"
            android:text="@string/next"
            android:textStyle="bold"
            app:cornerRadius="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@color/colorSecondary"
            app:strokeColor="@color/colorSecondary"
            app:strokeWidth="2dp"
            android:layout_marginBottom="12dp"
            android:text="@string/before"
            android:textStyle="bold"
            app:cornerRadius="8dp" />
    </LinearLayout>
</FrameLayout>