<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_start"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.ParentInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:layout_margin="18dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parent_info"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            android:visibility="visible"
            android:layout_marginTop="18dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:id="@+id/box_name"
            app:endIconMode="clear_text"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp">

            <EditText
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            app:cornerRadius="15dp"
            android:backgroundTint="@color/white"
            app:strokeColor="@color/black"
            android:text="@string/birth_date"
            android:textColor="@color/black"
            android:id="@+id/btn_date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_working"
            android:layout_marginTop="18dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group_working">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_working_yes"
                android:text="@string/yes"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_working_no"
                android:text="@string/no"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_caring"
            android:layout_marginTop="18dp"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_group_caring">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_caring_yes"
                android:text="@string/yes"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/radio_caring_no"
                android:text="@string/no"/>
        </RadioGroup>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>



        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cornerRadius="0dp"
            android:text="@string/next"
            android:textStyle="bold"
            android:id="@+id/btn_next"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:backgroundTint="@android:color/transparent"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/before"
            android:textStyle="bold"
            app:cornerRadius="0dp" />

    </LinearLayout>
</FrameLayout>